# ad2l_fantasy_server

./: Cargo.toml  README.md
migrations/2022-03-31-073308_conference/: down.sql  up.sql
migrations/2022-04-01-070358_players_initial_layout/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
