[package]
name = "ad2l_fantasy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = "1.0.136"
serde_derive = "1.0.79"
serde_json = "1.0.79"